# LexiQ-Compliance

./: .env.example  .gitignore  Bash  Cargo.toml  README.md  pubspec.yaml
.github/workflows/: android-release.yml
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml  LexiQKeyboardService.kt
android/app/src/main/kotlin/org/linguistic/assistant/: MainActivity.kt
android/app/src/main/res/: method.xml
android/app/src/main/res/layout/: keyboard_view.xml
android/app/src/main/res/values/: styles.xml
android/app/src/main/res/xml/: method.xml  qwerty.xml
android/gradle/wrapper/: gradle-wrapper.properties
lib/: main.dart
src/: audit.rs  main.rs  sentinel.rs
