[package]
name = "lexiq-compliance"
version = "1.0.0"
edition = "2021"
description = "A unified, multi-tier linguistic compliance engine designed to process textual diagnostics with ultra-low latency on Android."

[lib]
name = "lexiq_compliance"
crate-type = ["cdylib"]
path = "src/main.rs" # ◄— Explicitly tells Cargo to use main.rs as the library entrypoint

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
